# code_challenge_generator

backend/: database.db  pyproject.toml  server.py
backend/src/: .gitignore  ai_generator.py  app.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py
frontend/: .env
frontend/src/: App.jsx  main.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
frontend/src/utils/: api.js
