[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clerk-backend-api>=4.2.0",
    "fastapi>=0.125.0",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "svix>=1.84.1",
    "uvicorn>=0.38.0",
]
